-Created a rich text editor for creating and publishing articles -Implement savings to drafts, auto save with Hive and also preview articles

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -61,5 +61,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>We need access to your photo library to add images to your article</string>
 </dict>
 </plist>
