--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ dependencies:
   google_fonts: ^6.2.1
   google_sign_in: ^7.1.1
   sign_in_with_apple: ^7.0.1
+  image_picker: 1.2.0
+  shared_preferences: ^2.5.3
+  timeago: ^3.7.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
