--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   timeago: ^3.7.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  firebase_storage: ^13.0.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
