--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   firebase_storage: ^13.0.0
+  path_provider: ^2.1.5
+  path: ^1.9.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
