--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   firebase_storage: ^13.0.0
   path_provider: ^2.1.5
   path: ^1.9.1
+  flutter_markdown: ^0.7.7
+  url_launcher: ^6.3.2
+
+
 
 flutter_launcher_icons:
   android: "launcher_icon"
